// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Progress Notification Item should hide when current value is equvalent to target value 1`] = `
<div
  aria-selected={false}
  className="sc-bdVaJa gneklD"
  role="listitem"
>
  <span
    className="sc-bwzfXH cJKlyb"
  >
    target process
  </span>
  <div
    className="sc-htpNat hkuyqD"
  >
    <div
      className="sc-bxivhb kUGzNj"
    />
  </div>
</div>
`;

exports[`Project Progress Notification Item should not over 100% of width 1`] = `
<div
  aria-selected={false}
  className="sc-bdVaJa gneklD"
  role="listitem"
>
  <span
    className="sc-bwzfXH cJKlyb"
  >
    target process
  </span>
  <div
    className="sc-htpNat hkuyqD"
  >
    <div
      className="sc-bxivhb kUGzNj"
    />
  </div>
</div>
`;

exports[`Project Progress Notification Item should print correctly 1`] = `
<div
  aria-selected={false}
  className="sc-bdVaJa gneklD"
  role="listitem"
>
  <span
    className="sc-bwzfXH cJKlyb"
  >
    target process
  </span>
  <div
    className="sc-htpNat hkuyqD"
  >
    <div
      className="sc-bxivhb MqTMw"
    />
  </div>
</div>
`;
